# online-shop-vertica-dwh

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: dds-data-loader-dag.py  dwh-creator-dag.py  get-data-dag.py  stg-data-loader-dag.py
package/: errors.py  main.py  utils.py
sql/dds/: hubs-ddl.sql  links-ddl.sql  satelities-ddl.sql
sql/stg/: stg-ddl.sql
